[package]
name = "intent-example"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
android-activity = { version = "0.6.0", features = ["native-activity"] }
android-intent.path = "../"
jni = "0.20.0"
ndk-context = "0.1.1"

[package.metadata.android.sdk]
min_sdk_version = 21
